# quickgigs-django

./: .coverage  .dockerignore  .env  .env.example  .gitignore  .prettierignore  .railwayignore  CHANGELOG.md  Dockerfile  LATEST_UPDATES.md  Makefile  Procfile  README.md  TESTING_MANUAL.md  TESTING_METHODOLOGY.md  TEST_EXECUTION_GUIDE.md  all-tests-output.txt  app.py  build.sh  code_quality.md  conftest.py  design.md  devlogs.md  docker-compose.yml  manage.py  payment-security-test-output.txt  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  screenshot_guide.md  startup.py  structure.txt  test_detailed_output.txt  test_output.txt  test_output_verbose.txt  test_results.txt  testing.md  transformation_plan.md  user-isolation-test-output.txt  (+1 more)
accounts/: admin.py  apps.py  forms.py  models.py  signals.py  test_forms.py  test_models.py  test_views.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_userprofile_company_name_and_more.py  0003_alter_userprofile_hourly_rate.py  0004_modernize_userprofile.py  0005_alter_userprofile_options_alter_userprofile_bio_and_more.py
core/: context_processors.py  test_views.py  urls.py  views.py
core/templatetags/: currency_filters.py
docs/: design_patterns_examples.py
gigs/: admin.py  forms.py  models.py  test_forms.py  test_models.py  test_views.py  tests.py  urls.py  views.py
gigs/migrations/: 0001_initial.py  0002_alter_task_options_gig.py  (+5 more)
payments/: admin.py  models.py  test_models.py  test_views.py  urls.py  views.py
quickgigs_project/: asgi.py  settings.py  settings_prod.py  test_settings.py  urls.py  wsgi.py
scripts/: cleanup-legacy.sh  entrypoint.sh
static/css/: base.css  (+4 more)
templates/: base.html
todo_app/: admin.py  models.py  tests.py  urls.py  views.py
todo_project/: settings.py  settings_prod.py  urls.py
venv_local/: pyvenv.cfg
(+86 files in other folders)
